--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vozz Cafe and Restaurant Template</title>
+    <title>Voz Cafe and Restaurant Template</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Google Font: Inter -->
@@ -80,7 +80,9 @@
     <nav class="bg-surface shadow-md sticky top-0 z-50">
         <div class="container mx-auto px-4 py-3 flex justify-between items-center">
             <div class="flex items-center">
-                <i class="fas fa-utensils text-2xl text-primary mr-2"></i>
+                <!-- LOGO: The icon is removed and the image tag is now active. -->
+                <img src="assets/logo/logo.png" alt="Voz Cafe Logo" class="h-8 mr-3" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+                <i class="fas fa-utensils text-2xl text-primary mr-2" style="display: none;"></i>
                 <span class="text-xl font-bold">Voz Cafe and Restaurant Template</span>
             </div>
             <div class="hidden md:flex space-x-8">
