--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             transition: all 0.3s ease;
         }
         .hero {
-            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('assets/background/hero-bg.jpg');
+            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('assets/background/hero-bg.png');
             background-size: cover;
             background-position: center;
         }
@@ -273,9 +273,9 @@
 
         // --- DATA ---
         let branches = [
-            { id: 1, name: "Downtown Branch", address: "123 Main Street, Downtown, City", phone: "+1 (555) 123-4567", image: "assets/branches/downtown.jpg", grabfood: "https://www.grabfood.com", location: "https://maps.google.com" },
-            { id: 2, name: "Riverside Branch", address: "456 River Road, Riverside, City", phone: "+1 (555) 234-5678", image: "assets/branches/riverside.jpg", grabfood: "https://www.grabfood.com", location: "https://maps.google.com" },
-            { id: 3, name: "Hillside Branch", address: "789 Mountain View, Hillside, City", phone: "+1 (555) 345-6789", image: "assets/branches/hillside.jpg", grabfood: "https://www.grabfood.com", location: "https://maps.google.com" }
+            { id: 1, name: "Downtown Branch", address: "123 Main Street, Downtown, City", phone: "+1 (555) 123-4567", image: "assets/branches/downtown.png", grabfood: "https://www.grabfood.com", location: "https://maps.google.com" },
+            { id: 2, name: "Riverside Branch", address: "456 River Road, Riverside, City", phone: "+1 (555) 234-5678", image: "assets/branches/riverside.png", grabfood: "https://www.grabfood.com", location: "https://maps.google.com" },
+            { id: 3, name: "Hillside Branch", address: "789 Mountain View, Hillside, City", phone: "+1 (555) 345-6789", image: "assets/branches/hillside.png", grabfood: "https://www.grabfood.com", location: "https://maps.google.com" }
         ];
 
         const menuItems = [
